mule-user-guide/v/3.5/adding-community-runtime.adoc
= Adding Community Runtime

*Anypoint™ Studio* comes bundled with an embedded Enterprise runtimes with a 30-day Enterprise trial license. You can add Community runtime to your Anypoint Studio instance to build and test applications in Mule's free, open-source runtime environment.

. In Studio, under the *Help* menu, select *Install New Software...*
. In the *Work With* field of the *Install* wizard, use the drop-down menu to select
+
`Mule ESB Runtimes for Anypoint Studio - http://studio.mulesoft.org/r3/studio-runtimes`
+
image:/docs/download/attachments/122752254/StudioRuntimes.png?version=1&modificationDate=1400616574159[image] +

. Check the box to select **Anypoint Studio Community Runtimes**, then click *Next*.
. Review the *Install Details*, then click *Next* to continue.
. Click to accept the terms and conditions of the license agreement, the click *Finish*. Studio installs the Community runtimes. This may take several minutes to complete depending on the speed of your Internet connection and the number of runtimes you select.
. Click to agree to restart Anypoint Studio.
. When Studio restarts, under the File menu, select *New* > *Mule Project.*
. In the New Project wizard, click to select a CE option (CE stands for Community Edition).
+
image:/docs/download/attachments/122752254/36CEEEProject.png?version=1&modificationDate=1420744234129[image]

[WARNING]
*Are you behind a firewall?* +
If you are on a network with firewall restrictions, you may find that the Studio update sites are blocked and you are unable to download extensions. Allow the following sites on your firewall to allow Studio to connect to the update sites:

Allow on Firewall +
http://studio.mulesoft.org/[http://studio.mulesoft.org] +
http://repository.mulesoft.org/connectors/releases/
http://download.eclipse.org/technology/m2e/releases +
http://download.eclipse.org/eclipse/updates +
http://subclipse.tigris.org/[http://subclipse.tigris.org] +
http://findbugs.cs.umd.edu/eclipse/

== Change Runtime of an Existing Project

. Complete the procedure link:#AddingCommunityRuntime-AddingCommunityRuntime[above] to install additional Mule runtimes on your instance of Studio. 
. In the *Package Explorer* in Studio, double-click the `mule-project.xml` file to open it.
. Use the drop-down menu next to *Server Runtime* to select a new Mule runtime.
+

[WARNING]
*Community runtime does not support all the features available in Enterprise runtime.* If you switch runtimes from Enterprise to Community, be aware that some of your configurations may not be supported.
+

image:/docs/download/attachments/122752254/36DClickMuleProjXML.png?version=1&modificationDate=1420744453260[image]

. If changing from Enterprise to Community, Studio displays a warning to advise that it may initiate updates to the namespace, and asks for your permission to proceed; click *Yes* to continue. 
. Studio saves the change. Close the `mule-project.xml` file. +

== See Also

* Read a http://blogs.mulesoft.org/one-studio/[blog post] and/or link:#[release strategy] explaining the Single Studio distribution.
* Want to upgrade to Mule's Enterprise runtime? link:/docs/display/current/Installing+an+Enterprise+License[Install an Enterprise license].
* Get started with link:/docs/display/current/Mule+Fundamentals[Mule Fundamentals].
* Access a list of all the link:/docs/display/current/Studio+Update+Sites[update sites] available for your version of Anypoint Studio.
* link:/docs/display/current/Installing#Installing-WhichversionofMuleamIusing?[Which version of Mule am I using?]
